# kafka-rs

./: Cargo.toml  README.md
.github/workflows/: build.yaml
examples/: hello_kafka.rs
src/: connection.rs  connection_manager.rs  error.rs  executor.rs  lib.rs  message.rs  protocol.rs
src/protocol/: api_key.rs  mod.rs  primitive.rs  record.rs
